--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -17,8 +17,9 @@
     <h1><p class="textf">Nouveau Article<p></h1>
 
     {{ include('produit/_form.html.twig') }}
+        
 
-    <a href="{{ path('produit_index') }}"><p class="textf">Revenir à la liste<p></a>
+    <a href="{{ path('homepage') }}"><p class="textf">Revenir à la liste<p></a>
     </div>   
     </div>   
     </div> 
