--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -104,7 +104,7 @@ $('#navigation').removeClass("fixNavigation");
 
       <nav class="navbar navbar-light bg-light">
   <li class="nav-item">
-    <a class="nav-link bouton_banniere" href="{{ path('login_new')}}"></a>
+    <a class="nav-link bouton_banniere" href="{{ path('homepage')}}"></a>
 
      </li>
      </nav>
