--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -9,7 +9,7 @@
     </div>
 </div>
 <header id="header">
-	<h1 class="text-center">Bienvenue a vous ! </h1>
+	<h1 class="text-center">Bienvenue ! </h1>
 	<nav>
 		<div class="home display-none">Produit</div>
 		<div class="hamb">
