--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -102,12 +102,12 @@ $('#navigation').removeClass("fixNavigation");
         <a class="nav-link " href="{{ path('avis_index')}}" id="btn5">Avis</a>
       </li>
 
-      <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand nav-pers" href="">
-    <a class="bouton_banniere" href="{{ path('user_login') }}"></a>
-   </a>
-     </nav>
-      <nav class="navbar navbar-light bg-light">
+      
+  <li class="nav-item">
+    <a class="nav-link bouton_banniere" href="{{ path('user_login') }}"></a>
+  </li>
+     
+      
   <li class="nav-item">
     <a class="nav-link bouton_banniere1" href="{{ path('panier_index')}}"></a>
 
