--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -152,7 +152,7 @@ $('#navigation').removeClass("fixNavigation");
         <div class="col-md-3 fat3">
         <p><h3>Suivez Nous !</h3></p>
          <div class="row">
-      <div class="col-md-4 test"><a class="bouton_fac"  target="blank"href="web_banniere.php"></a></div>
+      <div class="col-md-4 test"><a class="bouton_fac"  target="blank"href="https://www.facebook.com/"></a></div>
       <div class="col-md-4 test"><a class="boutontwit"  target="blank" href="https://twitter.com/JohnSmi69142161"></a></div>
       <div class="col-md-4 test"><a class="bouton_inst" target="blank" href="https://www.instagram.com/green_force_4_you/
 "></a></div>
