--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -85,9 +85,12 @@
                             <i class="fa fa-shopping-cart"></i>
                             Valider votre commande
                         </a>
+                        
 
         {% endif %}
-    {%  endif %}
+    {%  endif %}<br>    
+    <a href="{{ path('papeterie_index') }}"><h2><p class="textf">Continuer vos achats</h2><p></a>
+
  </div>
     </div>
 </div>
