--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -104,7 +104,7 @@ $('#navigation').removeClass("fixNavigation");
 
       <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand nav-pers" href="">
-    <a class="bouton_banniere" href="{{ path('user_login') }}"></a>
+    <a class="bouton_banniere" href="{{ path('fos_user_security_login') }}"></a>
    </a>
      </nav>
       <nav class="navbar navbar-light bg-light">
