--- a/templates/bundles/FOSUserbundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserbundle/Security/login_content.html.twig
@@ -1,28 +1,26 @@
-
 {% trans_default_domain 'FOSUserBundle' %}
-
-
+{% if error %}
+    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+{% endif %}
 
 <form action="{{ path("fos_user_security_check") }}" method="post">
-    
-    <div class="row">
+    {% if csrf_token %}
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+    {% endif %}
+
+<div class="row">
         <div class="form-group">
-            <label for="email">{{ 'Email' }}</label>
-            <input type="text" id="email" name="_username"  placeholder ="Adresse email ..." required="required" autocomplete="email" class="form-control" />
-        </div>
+    <label for="username">{{ 'security.login.username'|trans }}</label>
+    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
+</div>
         <div class="form-group">
-            <label for="motdepasse">{{ 'Mot de passe' }}</label>
-            <input type="password" id="mdp" name="_password" placeholder="Mot de passe ..." required="required" autocomplete="current-password" class="form-control" />
-        </div>
+    <label for="password">{{ 'security.login.password'|trans }}</label>
+    <input type="password" id="password" name="_password" required="required" autocomplete="current-password" />
+</div>
         <div class="form-group">
-            <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-            <label for="remember_me">{{ 'Se souvenir de moi' }}</label>
-        </div>
-        
+    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+</div>
         <input type="submit" id="_submit" name="_submit" value="{{ 'Connexion !' }}" class="mx-auto form-control btn btn-success" />
-        
     </div>
 </form>
-
-
-
