--- a/templates/paiement/_form.html.twig
+++ b/templates/paiement/_form.html.twig
@@ -34,7 +34,7 @@
         Nous vous remercions pour votre commande et nous espérons vous revoir bientôt !
       </div>
       <div class="modal-footer">
-        <a class="btn btn-primary" href="{{ path('homepage') }}">Fermer</a>
+        <a class="btn btn-primary" href="{{ path('mail_index') }}">Fermer</a>
       </div>
     </div>
   </div>
