--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -106,9 +106,9 @@ $('#navigation').removeClass("fixNavigation");
   <a class="navbar-brand nav-pers" href="">
     <a class="bouton_banniere" href="{{ path('fos_user_security_login') }}"></a>
     {% if  not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-      Salul || <a href="{{ path('fos_user_security_login') }}">Se connecter</a>
+       <a href="{{ path('fos_user_security_login') }}">Se connecter</a>
       {% else %}
-      Casse toi! || <a href="{{ path('fos_user_security_logout') }}">Deconnection</a>
+       <a href="{{ path('fos_user_security_logout') }}">Deconnection</a>
     {% endif %}
    </a>
      </nav>
