--- a/templates/bundles/FOSUserbundle/Security/login.html.twig
+++ b/templates/bundles/FOSUserbundle/Security/login.html.twig
@@ -17,7 +17,9 @@
 
   
 
-<a href=""><p class="textf">Revenir</p></a> 
+<a href="/Green_Force/public/index.php"><p class="textf">Revenir</p></a> 
+<a href="/Green_Force/public/index.php/register"><p class="textf">S'inscrire</p></a> 
+
 </div>
     </div>
 </div>
