--- a/templates/bundles/FOSUserbundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserbundle/Security/login_content.html.twig
@@ -10,17 +10,17 @@
 
 <div class="row">
         <div class="form-group">
-    <label for="username">{{ 'security.login.username'|trans }}</label>
+    <label for="username">{{ 'Email' }}</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
 </div>
         <div class="form-group">
-    <label for="password">{{ 'security.login.password'|trans }}</label>
+    <label for="password">{{ 'Mot de passe' }}</label>
     <input type="password" id="password" name="_password" required="required" autocomplete="current-password" />
 </div>
         <div class="form-group">
     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+    <label for="remember_me">{{ 'Se souvenir de moi' }}</label>
 </div>
-        <input type="submit" id="_submit" name="_submit" value="{{ 'Connexion !' }}" class="mx-auto form-control btn btn-success" />
+        <input type="submit" id="_submit" name="_submit" value="{{ 'Connexion' }}" class="mx-auto form-control btn btn-success" />
     </div>
 </form>
