--- a/templates/bundles/FOSUserbundle/layout.html.twig
+++ b/templates/bundles/FOSUserbundle/layout.html.twig
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
+{% extends 'base.html.twig' %}
+{% block body %}
+
     <body>
         <div>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
@@ -31,4 +28,4 @@
             {% endblock fos_user_content %}
         </div>
     </body>
-</html>
+{% endblock %}
