--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,77 +2,92 @@
 
 {% block title %}Register{% endblock %}
 
+
 {% block body %}
-    <h1>S'inscrire</h1>
 
-    {{ form_start(registrationForm) }}
-    <div class="row mx-auto">
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.entreprise, {'label': 'Entreprise', 'class':'form-control'})}}
-        </div>
-
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.responsable, {'label': 'Responsable', 'class':'form-control'})}}
-        </div>
-
-         <div class="form-group form-control">
-        {{ form_row(registrationForm.telephone, {'label': 'Telephone', 'class':'form-control'}) }}
-        </div>
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 cont row justify-content-center"><div class="col-md-3 title"></div></div>
     </div>
 
-    <div class="row mx-auto">
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.email, {'label': 'Email', 'class':'form-control'}) }}
-        </div>
+    <div class="container-fluid">
+        <div class="row col-md-12 justify-content-center gen">
+            <div class="col-md-6 gen cadre">
+                <h1>S'inscrire</h1>
+                {{ form_start(registrationForm) }}
+                <div class="row mx-auto">
+                    <div class="form-group">
+                    {{ form_row(registrationForm.entreprise, {'label': 'Entreprise', 'class':'form-control'})}}
+                    </div>
+                    
+                    <div class="form-group form-c">
+                    {{ form_row(registrationForm.responsable, {'label': 'Responsable', 'class':'form-control'})}}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.adresseL, {'label': 'Adresse de Livraison', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group ">
+                    {{ form_row(registrationForm.telephone, {'label': 'Telephone', 'class':'form-control'}) }}
+                    </div>
+                </div>
+                <br>
+                <div class="row mx-auto">
+                    <div class="form-group ">
+                    {{ form_row(registrationForm.email, {'label': 'Email', 'class':'form-control'}) }}
+                    </div>
 
-         <div class="form-group form-control">
-        {{ form_row(registrationForm.villeL, {'label': 'Ville', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group ">
+                    {{ form_row(registrationForm.adresseL, {'label': 'Adresse de Livraison', 'class':'form-control'}) }}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.CpL, {'label': 'Code Postal', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group ">
+                    {{ form_row(registrationForm.villeL, {'label': 'Ville', 'class':'form-control'}) }}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.adresseF, {'label': 'Adresse de Facturation', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group">
+                    {{ form_row(registrationForm.CpL, {'label': 'Code Postal', 'class':'form-control'}) }}
+                    </div>
 
-         <div class="form-group form-control">
-        {{ form_row(registrationForm.villeF, {'label': 'Ville', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group ">
+                    {{ form_row(registrationForm.adresseF, {'label': 'Adresse de Facturation', 'class':'form-control'}) }}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.CpF, {'label': 'Code Postal', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group ">
+                    {{ form_row(registrationForm.villeF, {'label': 'Ville', 'class':'form-control'}) }}
+                    </div>
 
-          <div class="form-group form-control">
-        {{ form_row(registrationForm.NTVA, {'label': 'Numéro TVA', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group ">
+                    {{ form_row(registrationForm.CpF, {'label': 'Code Postal', 'class':'form-control'}) }}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.NSIRET, {'label': 'Numéro SIRET', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group ">
+                    {{ form_row(registrationForm.NTVA, {'label': 'Numéro TVA', 'class':'form-control'}) }}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.NKBIS, {'label': 'Numéro KBIS', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group">
+                    {{ form_row(registrationForm.NSIRET, {'label': 'Numéro SIRET', 'class':'form-control'}) }}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.username, {'label': 'Username', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group">
+                    {{ form_row(registrationForm.NKBIS, {'label': 'Numéro KBIS', 'class':'form-control'}) }}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.plainPassword, {'label': 'Mot de passe', 'class':'form-control'}) }}
-        </div>
+                    <div class="form-group">
+                    {{ form_row(registrationForm.username, {'label': 'Username', 'class':'form-control'}) }}
+                    </div>
 
-        <div class="form-group form-control">
-        {{ form_row(registrationForm.agreeTerms, {'label': 'Termes de conditions', 'class':'form-control'}) }}
-        </div>       
+                    <div class="form-group">
+                    {{ form_row(registrationForm.plainPassword, {'label': 'Mot de passe', 'class':'form-control'}) }}
+                    </div>
 
-        <button class="btn btn-success">S'inscrire</button></div>
-    {{ form_end(registrationForm) }}
+                    <div class="form-group">
+                    {{ form_row(registrationForm.agreeTerms, {'label': 'Termes de conditions', 'class':'form-control'}) }}
+                    </div>       
+
+                    <button class="btn btn-success">S'inscrire</button>
+                
+                </div>
+                {{ form_end(registrationForm) }}
+                <br>
+            </div>   
+        </div>   
+    </div>
 {% endblock %}
